[package]
name = "rust-aventurer"
version = "0.1.0"
edition = "2021"
authors = ["Alejandro B."]
homepage = "https://blaron.com/"
repository = "https://github.com/Blaron/Rust-adventurer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
terminal-menu = "2.0.4"
colored = "2.0.0"